--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,8 +4,29 @@ eclipse.project.name = appName + '-core'
 dependencies {
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
+  implementation "junit:junit:4.13.2"
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
+  }
+
+  sourceSets {
+    test {
+      java {
+        srcDirs = ['src/test/java']
+      }
+      resources {
+        srcDirs = ['src/test/resources']
+      }
+    }
+  }
+
+  test {
+    useJUnit()
+
+    testLogging {
+      events "passed", "failed", "skipped"
+      showStandardStreams = true
+    }
   }
 }
